# drivebase-gazebo-simulation

./: .dockerignore  .gitignore  LAUNCH.md  README.md  Run_Book.md  docker-compose.yml  hello_rover_checklist.md
docker/: Dockerfile  entrypoint.sh  gazebo.env
ros2_ws/scripts/: run_gazebo.sh  spawn_model.sh
ros2_ws/src/rover_description/models/: tfr_bot.sdf
ros2_ws/src/tfr_rover_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/tfr_rover_demo/tfr_rover_demo/: circle_driver.py
scripts/: build.sh  run_headless.sh  run_linux.sh  run_macos.sh  spawn_tfr_bot.sh
