<?xml version="1.0"?>
<package format="3">
  <name>tfr_rover_demo</name>
  <version>0.0.1</version>
  <description>Simple /cmd_vel demo</description>
  <maintainer email="you@example.com">TFR</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>